--- a/ecommerce_website/core/templates/core/fontpage.html
+++ b/ecommerce_website/core/templates/core/fontpage.html
@@ -1,5 +1,17 @@
-{% extends 'core/base.html'%}
-{% block title %} fontpage{% endblock %}
+{% extends 'core/base.html' %}
+{% block title %}Fontpage{% endblock %}
 {% block content %}
-fontpage
+<div class="flex flex-wrap">
+    {% for product in products %}  <!-- Changed 'products' to match the context variable -->
+    <div class="product w-1/3 p-2">
+        <div class="p-4 bg-gray-100">
+            <h2 class="text-xl">
+                {{ product.title }}  
+            </h2>
+            <p class="text-xs text-gray-600">${{product.get_display_price}}</p>
+        </div>
+        
+    </div>
+{% endfor %}
+</div>
 {% endblock %}
