--- a/ecommerce_website/core/templates/core/base.html
+++ b/ecommerce_website/core/templates/core/base.html
@@ -8,12 +8,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
- <nav class="max-w-4xl bg-teal-600 py-4 px-6 items-center justify-between flex mx-auto">
+ <nav class="max-w-4xl mx-auto bg-teal-600 py-4 px-6 items-center justify-between flex">
     <div class="logo">
         <a href="/" class="text-white text-2xl">FEAY</a>
     </div>
     <div class="menu">
-        <a href="{% url 'about' %}" class="text-white">About</a>
+    
+     
+ <a href="{% url 'about' %}" class="text-white">About</a>
     </div>
  </nav>
  <div class="max-w-4xl mx-auto py-4 px-6">
