--- a/ecommerce_website/core/templates/core/fontpage.html
+++ b/ecommerce_website/core/templates/core/fontpage.html
@@ -2,13 +2,15 @@
 {% block title %}Fontpage{% endblock %}
 {% block content %}
 <div class="flex flex-wrap">
-    {% for product in products %}  <!-- Changed 'products' to match the context variable -->
+    {% for product in products %}
     <div class="product w-1/3 p-2">
         <div class="p-4 bg-gray-100">
+            <a href="{% url 'product_detail' product.slug %}">
             <h2 class="text-xl">
                 {{ product.title }}  
             </h2>
-            <p class="text-xs text-gray-600">${{product.get_display_price}}</p>
+            <p class="text-xs text-gray-600">${{product.get_display_price}}</p> 
+        </a>
         </div>
         
     </div>
